[project]
name = "asutools"
version = "0.1.0"
description = "Minimal local tool launcher for macOS, with per-tool environment selection"
authors = [{ name = "asu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-framework-cocoa>=12.1",
    "pyqt6>=6.7",
    "setproctitle>=1.3.7",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",   # icon generation (scripts/make_icon.py only)
]

[project.scripts]
asutools = "asutools.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asutools"]
